Hard code circle versions
Don't seem to have access to define this elsewhere

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,12 @@ version: 2
 jobs:
   test:
     docker:
-      - image: cimg/ruby:{{ cat .ruby-version }}
+      - image: cimg/ruby:3.1.2
         environment:
           RAILS_ENV: test
           PGHOST: 127.0.0.1
           PGUSER: $PGUSER
-      - image: circleci/postgres:{{ grep postgres .tool-versions | awk '{ print $NF }' }}
+      - image: circleci/postgres:12.4
         environment:
           POSTGRES_USER: $PGUSER
           POSTGRES_PASSWORD: $POSTGRES_PASSWORD
@@ -40,7 +40,7 @@ jobs:
           command: bundle exec rspec spec --format progress
   rubocop:
     docker:
-      - image: cimg/ruby:{{ cat .ruby-version }}
+      - image: cimg/ruby:3.1.2
     steps:
       - checkout
       - restore_cache:
