--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,3 +10,4 @@ Style/Documentation:
     - app/helpers/application_helper.rb
     - app/models/application_record.rb
     - config/application.rb
+    - db/migrate/**/*
