--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ AllCops:
 
 Style/Documentation:
   Exclude:
+    - app/controllers/**/*
     - app/helpers/application_helper.rb
     - app/models/application_record.rb
     - config/application.rb
