--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,12 @@ jobs:
         environment:
           RAILS_ENV: test
           PGHOST: 127.0.0.1
-          PGUSER: $PGUSER
+          PGUSER: goods_and_goblins
       - image: circleci/postgres:12.4
         environment:
-          POSTGRES_USER: $PGUSER
+          POSTGRES_USER: goods_and_goblins
           POSTGRES_PASSWORD: $POSTGRES_PASSWORD
-          POSTGRES_DB: $POSTGRES_DB
+          POSTGRES_DB: goods_and_goblins_test
     steps:
       - checkout
       - restore_cache:
